@@ -1,5 +1,12 @@
 Changes with Apache 2.0.30-dev
 
+  *) Remove the call to exit() from within mod_auth_digest's post_config
+     phase.  [Aaron Bannert]
+
+  *) Fix a problem in mod_auth_digest that could potentially cause
+     problems with initialized static data on a system that uses DSOs.
+     [Aaron Bannert]
+
   *) Fix a segfault in the worker MPM that could happen during
      child process exits.  [Brian Pane, Aaron Bannert]
 
